--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
+<!--AppComponent has 2 children routes the GridComponent with our todos and the HistogramComponent
+these 2 children are as buttons that we click to navigate to inside our navbar component
+now the navbar component is booting here inside our AppComponent.. so our AppComponent is
+actually rendering the navbar-->
+
 <app-navbar></app-navbar>
 
 <router-outlet></router-outlet>
