--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -15,8 +15,8 @@
         <mat-icon class="signuppage-icon">person</mat-icon>
         <h1> Todos </h1>
         <nav class="menu-spacer">
-            <button (click)='NavigateTotodos()' routerLinkActive="active"><mat-icon>home</mat-icon> Todos </a>
-            <button (click)='NavigateToHistogram()' routerLinkActive="active"><mat-icon>account_circle</mat-icon> Histogram </a>
+            <button (click)='NavigateTotodos()' routerLinkActive="active"><mat-icon>checklist</mat-icon> Todos </button>
+            <button (click)='NavigateToHistogram()' routerLinkActive="active"><mat-icon>bar_chart</mat-icon> Histogram </button>
         </nav>
     </mat-toolbar-row>
 </mat-toolbar>
