--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,13 @@
 
 .right-align {
   display: flex;
+  justify-content: right;
+  margin: auto;
+}
+
+.left-align {
+  display: flex;
+  justify-content: left;
   margin: auto;
 }
 
