filters component done

--- a/src/app/components/navbar/filters/filters.component.html
+++ b/src/app/components/navbar/filters/filters.component.html
@@ -1,1 +1,26 @@
-<p>filters works!</p>
+<div class="col-md-10 p-0" *ngIf="!location.includes('/histogram')">   
+    <div *ngIf="checked" class="filters-height">
+       <mat-form-field class="mat-form-field-width">
+           <mat-label>Month</mat-label>
+           <mat-select [(value)]="selectedMonthOption"> <!--2-way data binding with the value that the user each time selects-->
+               <mat-option *ngFor="let option of months" value="option">{{option}}</mat-option>
+               </mat-select>
+           </mat-form-field>
+           <mat-form-field class="mat-form-field-width">
+               <mat-label>Year</mat-label>
+               <input matInput placeholder="Enter year...">
+           </mat-form-field>
+           <mat-form-field class="mat-form-field-width">
+               <mat-label>Status</mat-label>
+               <mat-select [(value)]="selectedStatusOption"> <!--2-way data binding with the value that the user each time selects-->
+                  <mat-option *ngFor="let option of status" value="option">{{option}}</mat-option>
+               </mat-select>
+           </mat-form-field>
+           <mat-form-field class="search-width">
+               <mat-label>Search</mat-label>
+               <input matInput #message maxlength="256" placeholder="Search by keywords...">
+               <mat-hint align="end">{{message.value.length}} / 256</mat-hint>
+           </mat-form-field>       
+    </div>
+</div>
+
