--- a/src/app/components/navbar/filters/filters.component.css
+++ b/src/app/components/navbar/filters/filters.component.css
@@ -1,15 +1,11 @@
 .filters-height {
-    font-size: 13px
+    font-size: 13px;
 }
 
 .search-width {
-    width: 40%;
-    margin-left: 10px;
-    margin-right: 10px;
+    width: 20%;
 }
 
 .mat-form-field-width {
-    width: 20%;
-    margin-left: 10px;
-    margin-right: 10px;
+    width: 15%;
 }
