--- a/src/styles.css
+++ b/src/styles.css
@@ -24,6 +24,38 @@
   margin: auto;
 }
 
+.flex-center {
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.paginator-at-the-bottom-of-screen { 
+    height: 15%;
+    font-size: larger;
+    color: white;
+    background-color: rgb(63,81,181);
+    position: fixed; 
+    bottom:0%;
+    width:100%; 
+}
+
+.mat-select-value {
+  color: white !important;
+}
+
+.mat-select-arrow {
+  color: white !important;
+}
+
+mat-spinner svg {
+  height: 60% !important;
+  width: 60% !important;
+}
+
 /* custom scrollbar */
 
   /* width */
