--- a/src/app/components/navbar/add-new-todo-dialog/add-new-todo-dialog.component.html
+++ b/src/app/components/navbar/add-new-todo-dialog/add-new-todo-dialog.component.html
@@ -1,1 +1,63 @@
-<p>add-new-todo-dialog works!</p>
+<form (ngSubmit)="save_todo()" [formGroup]='submitNewTodoForm' autocomplete="off">
+    <div mat-dialog-title style="margin: auto!important;">
+        <div mat-dialog-title class="product-window-title">
+            <div class="p-sm product-window">
+                <span style="color:#707070;">Create a new Todo</span>
+
+                <span style="display: inline-flex;margin-left: auto;" (click)="cancel()" class="mr-sm">
+                    <i class="material-icons" style="margin:auto 0;cursor: pointer;">clear</i>
+                </span>
+            </div>
+        </div>
+    </div>
+    <div mat-dialog-content class="product-form-window">
+
+        <div class="mt-3 font-bold size-font-small group-header-product text-center"> ΒΑΣΙΚΑ ΣΤΟΙΧΕΙΑ </div>
+        <br>
+        <div class="row" style="margin-top: 10px;">
+            <div class="col-md-12">
+
+                <mat-form-field class="search-width mr-2 ml-2">
+                    <mat-label>Text</mat-label>
+                    <input formControlName='keimeno' matInput #message maxlength="256" placeholder="Enter Text...">
+                    <mat-hint align="end">{{message.value.length}} / 256</mat-hint>
+                </mat-form-field>
+
+
+                <label>Date Created - Due Date<span  class="product-required" style="color:red;margin-left:3px;font-size: 16px;line-height: 13px;">*</span></label>
+                <mat-form-field standalone="true">
+                    <mat-label>Enter a date range</mat-label>
+                    <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
+                      <input matStartDate formControlName="start" placeholder="Start date">
+                      <input matEndDate formControlName="end" placeholder="End date">
+                    </mat-date-range-input>
+                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-date-range-picker #picker></mat-date-range-picker>
+                  
+                    <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
+                    <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error>
+                </mat-form-field>
+
+
+                
+
+                <mat-form-field class="mat-form-field-width mr-2 ml-2">
+                    <mat-label>Status</mat-label>
+                    <mat-select formControlName='status' [(value)]="selectedStatusOption"> <!--2-way data binding with the value that the user each time selects-->
+                       <mat-option *ngFor="let option of status" value="option">{{option}}</mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+
+        </div>
+
+        <br>
+
+        <div class="product-create-outer">
+            <button class="btn product-create-btn" type="submit">
+                <mat-icon>save</mat-icon>
+                <span>Αποθήκευση</span>
+            </button>
+        </div>
+    </div>
+</form>
