--- a/src/app/components/navbar/add-new-todo-dialog/add-new-todo-dialog.component.css
+++ b/src/app/components/navbar/add-new-todo-dialog/add-new-todo-dialog.component.css
@@ -2,10 +2,11 @@
     font-size: 13px;
 }
 
-.search-width {
-    width: 20%;
+.text-width {
+    width: 100%;
 }
 
-.mat-form-field-width {
-    width: 15%;
+.add-new-todo-dialog-header {
+    background-color: #3f51b5;
+    color: white;
 }
