delete button function well

--- a/src/app/components/grid/grid.component.css
+++ b/src/app/components/grid/grid.component.css
@@ -10,4 +10,11 @@ table {
     width: 100% !important;
 }
 
+.delete-btn {
+    background-color: rgb(44, 56, 126);
+}
+.delete-btn:hover {
+    background-color: tomato;
+}
+
 
