--- a/src/styles.css
+++ b/src/styles.css
@@ -56,6 +56,7 @@
     position: fixed; 
     bottom:0%;
     width:100%; 
+    z-index: -1;
 }
 
 .mat-select-arrow {
@@ -82,13 +83,13 @@ mat-spinner svg {
   
   /* Handle */
   ::-webkit-scrollbar-thumb {
-    background: #c2185b; 
+    background: rgb(63,81,181); 
     border-radius: 10px;
   }
   
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
-    background: #c04576; 
+    background: rgb(70, 90, 202);
   }
   
   
